# discern

./: Cargo.toml  LICENSE-MIT  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
src/: command.rs  lib.rs  macros.rs  query.rs  registry.rs
